# telegramo

./: README.md  eslint.config.js  package.json
backend/: .gitignore  pyproject.toml  ruff.toml
backend/src/: main.py  settings.py
src/: App.tsx  Auth.tsx  Home.tsx  client.ts  consts.ts  main.tsx  model.ts
src/components/: Chat.tsx
src/css/: index.css
src/fn/: client.ts
src/pages/: Auth.tsx  Home.tsx
