[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dmitry Bleschunov <d.bleshchunov@actum.cx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telethon = "^1.37.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.3.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
